fix(pro:table): triggers of last column is covered by layout tool (#1507)

--- a/packages/pro/table/style/index.less
+++ b/packages/pro/table/style/index.less
@@ -105,11 +105,21 @@
       }
     }
 
-    .@{pro-table-prefix}-layout-tool-trigger + .@{table-prefix}-content {
-      table > thead > tr:first-child {
-        th:last-child {
-          .@{table-prefix}-sortable-trigger {
-            margin-right: 40px;
+    &.@{table-prefix}-scroll-vertical {
+      .@{pro-table-prefix}-layout-tool-trigger + .@{table-prefix}-fixed-holder {
+        table > thead > tr:first-child {
+          th:nth-last-of-type(2) .@{table-prefix}-cell-triggers {
+            padding-right: 30px;
+          }
+        }
+      }
+    }
+
+    &:not(.@{table-prefix}-scroll-vertical) {
+      .@{pro-table-prefix}-layout-tool-trigger + .@{table-prefix}-content {
+        table > thead > tr:first-child {
+          th:last-child > .@{table-prefix}-cell-triggers {
+            padding-right: 38px;
           }
         }
       }
